--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.4",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
